# mykobo-py

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  RELEASE.md  pyproject.toml  releaserc.json
docs/: MESSAGE_BUS.md
docs/superpowers/plans/: 2026-03-27-dataclasses-to-pydantic.md
docs/superpowers/specs/: 2026-03-27-dataclasses-to-pydantic-design.md
mykobo_py/: client.py  utils.py
mykobo_py/anchor/: anchor.py  models.py
mykobo_py/anchor/dapp/: __init__.py  anchor.py  models.py
mykobo_py/anchor/solana/: __init__.py  anchor.py  models.py
mykobo_py/anchor/stellar/: anchor.py  models.py
mykobo_py/business/: business.py  models.py
mykobo_py/business/compliance/: countries.py
mykobo_py/circle/: circle.py
mykobo_py/circle/models/: request.py
mykobo_py/idenfy/: idenfy.py
mykobo_py/idenfy/models/: requests.py  responses.py
mykobo_py/identity/: __init__.py  identity.py  utils.py
mykobo_py/identity/models/: auth.py  request.py  response.py
mykobo_py/ledger/: ledger.py
mykobo_py/ledger/models/: request.py
mykobo_py/message_bus/: __init__.py
mykobo_py/message_bus/kafka/: kafka.py
mykobo_py/message_bus/models/: __init__.py  base.py  event.py  instruction.py  message.py
mykobo_py/message_bus/sqs/: SQS.py
mykobo_py/sumsub/: __init__.py  sumsub.py
mykobo_py/sumsub/models/: requests.py
mykobo_py/wallets/: wallets.py
mykobo_py/wallets/models/: request.py
tests/anchor/: test_dapp_client.py  test_dapp_models.py  test_solana_client.py  test_solana_models.py  transaction-payload.json
tests/business/: test_business_rules.py
tests/identity/: test_identity_deserialization.py
tests/message_bus/: test_kafka.py  test_message_models.py  test_sqs.py
tests/stubs/: ledger_transaction_details.json  new_customer.json  otc_challenge.json  profile_change_log.json  risk_profile.json
