[tool.poetry]
name = "mykobo-py"
version = "1.7.2"
description = "Python library to interact with the MyKobo APIs"
authors = ["Kwabena Aning <kwabena.aning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dataclasses-json = "^0.6.7"
requests = "^2.32.5"
pyjwt = "^2.10.1"
boto3 = "^1.40.64"
kafka-python = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
requests-mock = "^1.12.1"
python-dotenv = "^1.0.1"
python-semantic-release = "^9.18.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["mykobo_py/__init__.py:__version__"]
branch = "main"
major_on_zero = false
tag_format = "{version}"
build_command = "poetry build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
