[tool.poetry]
name = "mykobo-py"
version = "1.15.2"
description = "Python library to interact with the MyKobo APIs"
authors = ["Kwabena Aning <kwabena.aning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pydantic = "^2.0"
requests = "2.33.0"
pyjwt = "2.12.0"
boto3 = "^1.42.77"
kafka-python = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
requests-mock = "^1.12.1"
python-dotenv = "^1.2.2"
python-semantic-release = "^10.5.3"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["mykobo_py/__init__.py:__version__"]
branch = "main"
major_on_zero = false
tag_format = "{version}"
build_command = "poetry build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
